...
                    android:visibility="gone"
                    tools:src="@android:drawable/ic_menu_gallery"
                    tools:visibility="visible" />
            </FrameLayout>

            <TextView
                android:id="@+id/viewEventScreenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
...

                <Space
                    android:layout_width="12dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/viewEventEditButton"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_navy"
                    android:fontFamily="serif"
                    android:gravity="center"
...
