...
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/createEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/create_event_title"
                android:textColor="#24356B"
                android:textSize="28sp"
...
                android:text="@string/event_title_hint"
                android:textColor="#111111"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/createEventTitleInput"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_box_outline"
                android:gravity="center_vertical"
                android:hint=""
...
